# CUDA_optimazation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  WORKLOG.md  gemm_blocksize_tuning.csv
Docs/Nvfp4/: cutalss.md  llmquant.md  quant.md
Docs/ReserchBankConflictArchThor/: problem_definition.md
Docs/blackwell/: feature.md  learn.md  tcgen05.md
Docs/cutlass/: blackwellMMA.md  container-maintenance.md  cutlassNVFP4GEMM.md  cutlassSimpleExemple.md  sm110_gemm_bank_conflict_research.md
GEMM/include/: gemm_benchmark.cuh  gemm_common.cuh  sgemm_kernels.cuh  tc3_gemm_kernel.cuh  tc4_gemm_kernel.cuh  tc5_gemm_kernel.cuh  tc_gemm_kernels.cuh
GEMM/src/: main.cu  tune_blocksize.cu  v7_resource_probe.cu
GEMMComponents/GEMMGmemToSmem/: README.md
GEMMComponents/GEMMGmemToSmem/00_naive_gmem_to_smem/: demo.cu
GEMMComponents/GEMMGmemToSmem/01_coalesced_gmem_to_smem/: demo.cu
GEMMComponents/GEMMGmemToSmem/02_vectorized_float4_load/: demo.cu
GEMMComponents/GEMMGmemToSmem/03_row_col_major_addressing/: demo.cu
GEMMComponents/GEMMGmemToSmem/03_transposed_smem_store/: demo.cu
GEMMComponents/GEMMGmemToSmem/04_coalesced_load_transposed_store/: demo.cu
GEMMComponents/GEMMGmemToSmem/04_smem_padding_bank_conflict/: demo.cu
GEMMComponents/GEMMGmemToSmem/05_smem_swizzle_store/: demo.cu
GEMMComponents/GEMMGmemToSmem/05_transpose_padding_bank_conflict/: demo.cu
GEMMComponents/GEMMGmemToSmem/06_predicated_tile_load/: demo.cu
GEMMComponents/GEMMGmemToSmem/07_double_buffer_gmem_to_smem/: demo.cu
GEMMComponents/GEMMGmemToSmem/08_cp_async_gmem_to_smem/: demo.cu
GEMMComponents/GEMMGmemToSmem/09_tma_gmem_to_smem/: demo.cu
GEMMComponents/GEMMGmemToSmem/common/: gmem_to_smem_demo.cuh
GEMMComponentsSM110Thor/: README.md  build_and_run.sh
GEMMComponentsSM110Thor/00_runtime_sanity/: demo.cu
GEMMComponentsSM110Thor/01_tcgen05_tmem_probe/: demo.cu
GEMMComponentsSM110Thor/02_clc_persistent_tmem_probe/: demo.cu
GEMMComponentsSM110Thor/common/: sm110_thor_components.cuh
GEMMsm110/: README.md  build_and_run.sh
GEMMsm110/include/: custom_sm110_gemm.cuh  cutlass_sm110_backends.cuh  gemm_benchmark.cuh  gemm_common.cuh  sm110_backend_registry.cuh  sm110_ptx_helpers.cuh  tc3_gemm_kernel.cuh  tc4_gemm_kernel.cuh  tc5_gemm_kernel.cuh
GEMMsm110/include/backends/: tc0_baseline.cuh  tc1_tc2_tma.cuh  tc3_pipeline.cuh  tc4a_warp_specialized.cuh  tc4bc_cluster.cuh  tc5_persistent.cuh
GEMMsm110/include/requant/: e2m1_encode.cuh  pack_fp4.cuh  requant_backend.cuh  scale_policy.cuh  sm110_tcgen05_epilogue.cuh
GEMMsm110/src/: main.cu  runtime_sanity.cu  tc3_minimal.cu
GEMMsm110/tests/: requant_epilogue_benchmark.cu  run_requant_epilogue_benchmark.sh
REDUCE/include/: reduce_benchmark.cuh  reduce_common.cuh  reduce_kernels.cuh
REDUCE/src/: main.cu
SmemReserch/: README.md
SmemReserch/BankConflictBench/: README.md  build.sh  parse_ncu_results.py  parse_results.py  run_basic.sh  run_ncu.sh
SmemReserch/bank_conflict/: README.md
SmemReserch/bank_conflict/cp_async/: README.md
SmemReserch/bank_conflict/cp_async/scripts/: parse_results.py  run_basic.sh  run_ncu.sh
SmemReserch/bank_conflict/cp_async/src/: CMakeLists.txt  cp_async_bench.cu
SmemReserch/bank_conflict/ld_shared_1d/: README.md
SmemReserch/bank_conflict/ld_shared_1d/scripts/: build.sh  parse_ncu_results.py  parse_results.py  run_basic.sh  run_ncu.sh  verify_sass.sh
SmemReserch/bank_conflict/ld_shared_1d/src/: smem_bank_bench.cu  smem_bank_bench.cuh
SmemReserch/bank_conflict/real_transpose_case/: README.md
SmemReserch/bank_conflict/real_transpose_case/scripts/: build.sh  parse_ncu_results.py  parse_results.py  run_basic.sh  run_ncu.sh
SmemReserch/bank_conflict/real_transpose_case/src/: CMakeLists.txt  real_transpose_bench.cu
SmemReserch/bank_conflict/st_shared_1d/: README.md
SmemReserch/bank_conflict/st_shared_1d/scripts/: parse_results.py  run_basic.sh  run_ncu.sh
SmemReserch/bank_conflict/st_shared_1d/src/: CMakeLists.txt  st_shared_1d_bench.cu
SmemReserch/bank_conflict/tcgen05_smem_operand/: README.md
SmemReserch/bank_conflict/tcgen05_smem_operand/scripts/: build.sh  parse_results.py  run_basic.sh  run_ncu.sh
SmemReserch/bank_conflict/tcgen05_smem_operand/src/: CMakeLists.txt  tcgen05_smem_operand_bench.cu
SmemReserch/bank_conflict/tma/: README.md
SmemReserch/bank_conflict/tma/scripts/: parse_results.py  run_basic.sh  run_ncu.sh
SmemReserch/bank_conflict/tma/src/: CMakeLists.txt  tma_bench.cu
SmemReserch/bank_conflict/transpose_2d_case/: README.md
SmemReserch/bank_conflict/transpose_2d_case/scripts/: build.sh  generate_backend_heatmaps.py  parse_ncu_results.py  parse_results.py  run_basic.sh  run_ncu.sh
SmemReserch/bank_conflict/transpose_2d_case/src/: CMakeLists.txt  transpose_2d_bench.cu
SmemReserch/src/: CMakeLists.txt  smem_bank_bench.cu  smem_bank_bench.cuh
TRANSFORMER/: README.md
TRANSFORMER/include/: transformer_benchmark.cuh  transformer_common.cuh  transformer_kernels.cuh
TRANSFORMER/src/: main.cu
build_cuda13/: Makefile  cmake_install.cmake
docs/: benchmark.md  per.md  tc4_tc5_ncu_summary.md  toolchain.md
scripts/: plot_benchmarks.py  run_gemm_backend.sh  run_gemm_experiments.sh  run_gemm_fp32_experiments.sh  run_gemm_sm110_experiments.sh  run_gemm_tensor_core_experiments.sh  run_gemm_tuning.sh  run_reduce_experiments.sh  run_transformer_experiments.sh
scripts/v7_tuning/: candidate_model.py  generate_candidates.py  generate_probe_registry.py  test_candidate_model.py  v7_baseline_resources.json  v7_parameter_model.md
